Camera Ready Version

--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -203,14 +203,14 @@ The process noises for a $\SI{50}{\hertz}$ filter are listed in Table \ref{proce
 \centering
 %% Some packages, such as MDW tools, offer better commands for making tables
 %% than the plain LaTeX2e tabular which is used here.
-\begin{tabular}{c l c}
+\begin{tabular}{c l l}
 \hline
-Parameter & Decribtion & Value\\
+Parameter & Process Noise for & Value\\
 \hline
-$\sigma_a$ & Acceleration Process Noise & \SI{6.0}{\metre\per\square\second} \\
-$\sigma_{\dot \psi}$ & Yawrate Process Noise & \SI{0.028}{\radian\per\second}\\
-$\sigma_{\dot \phi}$ & Pitchrate Process Noise & \SI{0.070}{\radian\per\second}\\
-$\sigma_{\dot \Theta}$ & Rollrate Process Noise & \SI{0.070}{\radian\per\second}\\
+$\sigma_a$ & Acceleration & \SI{6.0}{\metre\per\square\second} \\
+$\sigma_{\dot \psi}$ & Yawrate & \SI{0.028}{\radian\per\second}\\
+$\sigma_{\dot \phi}$ & Pitchrate & \SI{0.070}{\radian\per\second}\\
+$\sigma_{\dot \Theta}$ & Rollrate & \SI{0.070}{\radian\per\second}\\
 \hline
 \end{tabular}
 \end{table}
